force-app/main/default/objects/Broadcast_Configuration__mdt/fields/Header_Value__c.field-meta.xml
<CustomField>
    <fullName>Header_Value__c</fullName>
    <label>Header Value</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>